# concierge-old

./: .gitmodules  BUILD  Makefile  README.md  WORKSPACE  doc.go  empi.go  go.mod  go.sum  main.go
api/v1/: empi.pb.go
apiv1/: apiv1.go  directory.pb.go  directory.pb.gw.go  empi.pb.go  empi.pb.gw.go  model.pb.go  server.pb.go  server.pb.gw.go  services.pb.go  services.pb.gw.go
cav/: cav.go
cav/soappms/: pms.go
cmd/: BUILD.bazel  auth-create.go  auth.go  invoke-cav.go  invoke-empi.go  invoke-nadex.go  invoke.go  resolve.go  root.go  serve.go  test-empi.go  test-nadex.go  test.go
empi/: BUILD.bazel  authority.go  empi.go  nhsnumber.go  nhsnumber_test.go
england/sds/: roles.go  roles_test.go
fhir/: composition_status.go  resource_status.go
identifiers/: identifiers.go  known.go
nadex/: BUILD.bazel  nadex.go
protos/v1/: empi.proto  server.proto
sds/: roles.go  roles_test.go
server/: auth-db.go  auth.go  auth_test.go  server.go
terminology/: terminology.go
wales/cav/: cav.go
wales/cav/soap/: pms.go
wales/empi/: empi.go
wales/nadex/: nadex.go
wales/wcrs/: StoreDocument_flattened.wsdl  wcrs.go
