load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "serve.go",
        "test.go",
        "test-empi.go",
        "test-nadex.go",
    ],
    importpath = "github.com/wardle/concierge/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//empi:go_default_library",
        "//nadex:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_wardle_concierge-api//v1:go_default_library",

    ],
)
