load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nadex.go"],
    importpath = "github.com/wardle/concierge/nadex",
    visibility = ["//visibility:public"],
    deps = [
        "@in_gopkg_jcmturner_gokrb5_v7//client:go_default_library",
        "@in_gopkg_jcmturner_gokrb5_v7//config:go_default_library",
        "@in_gopkg_korylprince_go_ad_auth_v2//:go_default_library",
        "@in_gopkg_ldap_v3//:go_default_library",
    ],
)
